--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -57,7 +57,118 @@ jobs:
     strategy:
         matrix: ${{ fromJson(needs.config.outputs.rootfs_matrix) }}
     steps:
-      # ...下略，原样保留...
+      - name: Get more disk space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Debug - Check current directory and files
+        run: |
+          pwd
+          ls -la
+          ls -la config/suites/
+
+      - name: Set environment variables
+        id: vars
+        run: |
+          source config/suites/${{ matrix.suite }}.sh
+          echo "suite_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
+          ROOTFS_ZIP_NAME="${{ env.ROOTFS_FILE_PREFIX }}-${RELEASE_VERSION}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}-rootfs.zip"
+          ROOTFS_TAR_NAME="${{ env.ROOTFS_FILE_PREFIX }}-${RELEASE_VERSION}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}.rootfs.tar.xz"
+          ROOTFS_DOWNLOAD_URL="https://github.com/${{ env.REPO_OWNER }}/${{ env.REPO_NAME }}/releases/download/${{ env.RELEASE_TAG }}/${ROOTFS_ZIP_NAME}"
+          echo "rootfs_zip_name=$ROOTFS_ZIP_NAME" >> $GITHUB_OUTPUT
+          echo "rootfs_tar_name=$ROOTFS_TAR_NAME" >> $GITHUB_OUTPUT
+          echo "rootfs_download_url=$ROOTFS_DOWNLOAD_URL" >> $GITHUB_OUTPUT
+
+      - name: Install GitHub CLI (if missing)
+        run: |
+          if ! command -v gh &> /dev/null; then
+            sudo apt update && sudo apt install -y gh
+          fi
+          gh --version
+
+      - name: Authenticate GitHub CLI (用于检查 Release 资产)
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+
+      - name: Check if rootfs zip exists in remote Release
+        id: check_remote_rootfs
+        run: |
+          gh release view ${{ env.RELEASE_TAG }} \
+            --repo ${{ env.REPO_OWNER }}/${{ env.REPO_NAME }} \
+            --json assets \
+            --jq ".assets[] | select(.name == \"${{ steps.vars.outputs.rootfs_zip_name }}\") | .name" > /tmp/asset_check.txt
+          
+          if [ -s /tmp/asset_check.txt ]; then
+            echo "✅ Found remote rootfs zip: ${{ steps.vars.outputs.rootfs_zip_name }}"
+            echo "remote_exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "❌ Remote rootfs zip not found: ${{ steps.vars.outputs.rootfs_zip_name }}"
+            echo "remote_exists=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Download remote rootfs zip (if exists)
+        if: steps.check_remote_rootfs.outputs.remote_exists == 'true'
+        run: |
+          mkdir -p ${{ github.workspace }}/build
+          wget -O ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_zip_name }} ${{ steps.vars.outputs.rootfs_download_url }}
+          ls -la ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_zip_name }}
+          unzip -o ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_zip_name }} -d ${{ github.workspace }}/build/
+          ls -la ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_tar_name }}
+
+      - name: Install dependencies (only if remote rootfs not found)
+        if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
+        shell: bash
+        run: |
+          sudo apt-get update && sudo apt-get upgrade -y
+          sudo apt-get install -y build-essential gcc-aarch64-linux-gnu bison \
+          qemu-user-static qemu-system-arm qemu-efi u-boot-tools binfmt-support \
+          debootstrap flex libssl-dev bc rsync kmod cpio xz-utils fakeroot parted \
+          udev dosfstools uuid-runtime git-lfs device-tree-compiler python2 python3 \
+          python-is-python3 fdisk bc debhelper python3-pyelftools python3-setuptools \
+          python3-distutils python3-pkg-resources swig libfdt-dev libpython3-dev dctrl-tools
+
+      - name: Add execute permission to scripts (only if remote rootfs not found)
+        if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
+        run: |
+          chmod +x ./build.sh
+          chmod +x ./scripts/*.sh
+          ls -la ./build.sh
+          ls -la ./scripts/build-rootfs.sh
+
+      - name: Build rootfs (only if remote rootfs not found)
+        if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
+        shell: bash
+        run: |
+          mkdir -p chroot/etc/default rootfs/dev
+          sudo $GITHUB_WORKSPACE/build.sh --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} --rootfs-only
+
+      - name: Debug - Check rootfs file
+        run: |
+          TARGET_FILE="${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_tar_name }}"
+          if [ -f "$TARGET_FILE" ]; then
+            echo "✅ Rootfs file exists: $TARGET_FILE"
+            du -h "$TARGET_FILE"
+          else
+            echo "❌ Rootfs file not found: $TARGET_FILE"
+            exit 1
+          fi
+
+      - name: Upload rootfs artifact
+        uses: actions/upload-artifact@v4.3.3
+        with:
+            name: ${{ env.ROOTFS_FILE_PREFIX }}-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}-rootfs
+            path: ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_tar_name }}
+            if-no-files-found: error
+            compression-level: 6
+            overwrite: false
 
   build:
     runs-on: ubuntu-22.04
