--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -56,7 +56,6 @@ jobs:
             else
               echo "rootfs_matrix={\"include\":[${rootfs_matrix::-1}]}" >> $GITHUB_OUTPUT
             fi
-
   rootfs:
     runs-on: ubuntu-22.04
     name: Build rootfs (${{ matrix.suite }}-${{ matrix.flavor }})
@@ -87,27 +86,23 @@ jobs:
           ls -la
           ls -la config/suites/
           df -h
-
       - name: Set environment variables
         id: vars
         run: |
           source config/suites/${{ matrix.suite }}.sh || { echo "Error loading suite config"; exit 1; }
           echo "suite_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
-          # 修正：匹配实际生成的 Rootfs 文件名格式（去掉 flavor）
-          ROOTFS_ZIP_NAME="${{ env.ROOTFS_FILE_PREFIX }}-${RELEASE_VERSION}-preinstalled-${{ env.ROOTFS_ARCH }}-rootfs.zip"
-          ROOTFS_TAR_NAME="${{ env.ROOTFS_FILE_PREFIX }}-${RELEASE_VERSION}-preinstalled-${{ env.ROOTFS_ARCH }}.rootfs.tar.xz"
+          ROOTFS_ZIP_NAME="${{ env.ROOTFS_FILE_PREFIX }}-${RELEASE_VERSION}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}-rootfs.zip"
+          ROOTFS_TAR_NAME="${{ env.ROOTFS_FILE_PREFIX }}-${RELEASE_VERSION}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}.rootfs.tar.xz"
           ROOTFS_DOWNLOAD_URL="https://github.com/${{ env.REPO_OWNER }}/${{ env.REPO_NAME }}/releases/download/${{ env.RELEASE_TAG }}/${ROOTFS_ZIP_NAME}"
           echo "rootfs_zip_name=$ROOTFS_ZIP_NAME" >> $GITHUB_OUTPUT
           echo "rootfs_tar_name=$ROOTFS_TAR_NAME" >> $GITHUB_OUTPUT
           echo "rootfs_download_url=$ROOTFS_DOWNLOAD_URL" >> $GITHUB_OUTPUT
-
       - name: Install GitHub CLI (if missing)
         run: |
           if ! command -v gh &> /dev/null; then
             sudo apt update && sudo apt install -y gh
           fi
           gh --version
-
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
@@ -130,7 +125,6 @@ jobs:
             echo "❌ Remote rootfs zip not found or release missing"
             echo "remote_exists=false" >> $GITHUB_OUTPUT
           fi
-
       - name: Download remote rootfs zip (if exists)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'true'
         run: |
@@ -139,7 +133,6 @@ jobs:
           ls -la ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_zip_name }}
           unzip -o ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_zip_name }} -d ${{ github.workspace }}/build/
           ls -la ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_tar_name }} || { echo "Unzip failed"; exit 1; }
-
       - name: Install full build dependencies (only if remote rootfs not found)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
         shell: bash
@@ -157,7 +150,6 @@ jobs:
           sudo update-binfmts --enable qemu-aarch64
           ls /usr/bin/qemu-aarch64-static
           update-binfmts --display qemu-aarch64
-
       - name: Add execute permission to scripts (only if remote rootfs not found)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
         run: |
@@ -165,7 +157,6 @@ jobs:
           chmod +x ./scripts/*.sh
           ls -la ./build.sh
           ls -la ./scripts/build-rootfs.sh
-
       - name: Create correct chroot/rootfs directories (only if remote rootfs not found)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
         shell: bash
@@ -175,14 +166,12 @@ jobs:
           sudo chmod 777 -R ${{ github.workspace }}/build/chroot
           sudo chmod 777 -R ${{ github.workspace }}/build/rootfs
           ls -la ${{ github.workspace }}/build/
-
       - name: Build rootfs (only if remote rootfs not found)
         if: steps.check_remote_rootfs.outputs.remote_exists == 'false'
         shell: bash
         run: |
           cd ${{ github.workspace }}
           sudo bash -x ./build.sh --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} --rootfs-only 2>&1 | tee build-rootfs.log
-
       - name: Save build log (debug)
         uses: actions/upload-artifact@v4.3.3
         with:
@@ -201,8 +190,8 @@ jobs:
             ls -la ${{ github.workspace }}/build/
             exit 1
           fi
-
-      # 修正：缓存 Rootfs 产物（匹配实际文件路径，去掉 flavor）
+      
+      # 新增：缓存 Rootfs 产物（跨 Job 复用）
       - name: Cache Rootfs
         uses: actions/cache@v3
         with:
@@ -214,7 +203,7 @@ jobs:
       - name: Upload rootfs artifact
         uses: actions/upload-artifact@v4.3.3
         with:
-            name: ${{ env.ROOTFS_FILE_PREFIX }}-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ env.ROOTFS_ARCH }}-rootfs
+            name: ${{ env.ROOTFS_FILE_PREFIX }}-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}-rootfs
             path: ${{ github.workspace }}/build/${{ steps.vars.outputs.rootfs_tar_name }}
             if-no-files-found: error
             compression-level: 6
@@ -250,13 +239,11 @@ jobs:
           ls -la
           ls -la config/boards/
           df -h
-
       - name: Set environment variables
         id: vars
         run: |
           source config/suites/${{ matrix.suite }}.sh || { echo "Error loading suite config"; exit 1; }
           echo "suite_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
-
       - name: Set DEB Asset Name
         id: deb-asset
         run: |
@@ -264,14 +251,12 @@ jobs:
           DEB_DOWNLOAD_URL="https://github.com/${{ env.REPO_OWNER }}/${{ env.REPO_NAME }}/releases/download/${{ env.RELEASE_TAG }}/${DEB_ZIP_NAME}"
           echo "deb_zip_name=$DEB_ZIP_NAME" >> $GITHUB_OUTPUT
           echo "deb_download_url=$DEB_DOWNLOAD_URL" >> $GITHUB_OUTPUT
-
       - name: Install GitHub CLI (if missing)
         run: |
           if ! command -v gh &> /dev/null; then
             sudo apt update && sudo apt install -y gh
           fi
           gh --version
-
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
@@ -294,7 +279,6 @@ jobs:
             echo "❌ Remote deb zip not found or release missing"
             echo "deb_remote_exists=false" >> $GITHUB_OUTPUT
           fi
-
       - name: Download remote DEB zip (if exists)
         if: steps.check_remote_deb.outputs.deb_remote_exists == 'true'
         run: |
@@ -303,7 +287,6 @@ jobs:
           ls -la ${{ github.workspace }}/build/${{ steps.deb-asset.outputs.deb_zip_name }}
           unzip -o ${{ github.workspace }}/build/${{ steps.deb-asset.outputs.deb_zip_name }} -d ${{ github.workspace }}/build/
           ls -la ${{ github.workspace }}/build/*.deb || { echo "Unzip failed"; exit 1; }
-
       - name: Install full build dependencies
         shell: bash
         run: |
@@ -312,14 +295,13 @@ jobs:
             build-essential device-tree-compiler u-boot-tools \
             qemu-user-static binfmt-support debootstrap \
             fdisk parted dosfstools uuid-runtime rsync kmod
-
-      # 修正：Deb 缓存新增 zip 包路径，匹配日志中的 deb-packages-*.zip
+      
+      # 新增：缓存 Deb 包依赖
       - name: Cache Deb packages
         uses: actions/cache@v3
         with:
           path: |
             ${{ github.workspace }}/build/*.deb
-            ${{ github.workspace }}/build/*.zip
             /var/cache/apt/archives/*.deb
           key: ${{ matrix.board }}-${{ matrix.suite }}-deb-cache-${{ hashFiles('config/boards/*.sh', 'config/suites/*.sh') }}
           restore-keys: |
@@ -335,15 +317,15 @@ jobs:
           sudo chmod 777 -R ${{ github.workspace }}/build/chroot
           sudo chmod 777 -R ${{ github.workspace }}/build/rootfs
           ls -la ${{ github.workspace }}/build/
-
-      # 修正：恢复 Rootfs 缓存（匹配实际文件路径，去掉 flavor）
+      
+      # 新增：恢复 Rootfs 缓存（复用 rootfs Job 的产物）
       - name: Restore Rootfs Cache
         uses: actions/cache/restore@v3
         with:
-          path: ${{ github.workspace }}/build/${{ env.ROOTFS_FILE_PREFIX }}-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ env.ROOTFS_ARCH }}.rootfs.tar.xz
+          path: ${{ github.workspace }}/build/${{ env.ROOTFS_FILE_PREFIX }}-${{ steps.vars.outputs.suite_version }}-preinstalled-${{ matrix.flavor }}-${{ env.ROOTFS_ARCH }}.rootfs.tar.xz
           key: rootfs-${{ matrix.suite }}-${{ matrix.flavor }}-${{ hashFiles('config/suites/*.sh', 'config/flavors/*.sh') }}
 
-      # 缓存内核编译产物（匹配日志中的内核文件路径）
+      # 新增：缓存内核编译产物（如果你的 build.sh 包含内核编译）
       - name: Cache Kernel Build
         uses: actions/cache@v3
         with:
@@ -359,7 +341,6 @@ jobs:
         run: |
           cd ${{ github.workspace }}
           sudo bash -x ./build.sh --board=${{ matrix.board }} --suite=${{ matrix.suite }} --flavor=${{ matrix.flavor }} 2>&1 | tee build-image.log
-
       - name: Save build log (debug)
         uses: actions/upload-artifact@v4.3.3
         with:
@@ -372,16 +353,6 @@ jobs:
           echo "=== Images directory contents ==="
           ls -la ${{ github.workspace }}/images/ || echo "Images directory not found"
           ls -la ${{ github.workspace }}/build/
-
-      # 新增：缓存已构建的镜像文件（可选，进一步减少重复构建）
-      - name: Cache Built Images
-        uses: actions/cache@v3
-        with:
-          path: ${{ github.workspace }}/images/*.img.xz
-          key: image-${{ matrix.board }}-${{ matrix.suite }}-${{ matrix.flavor }}-${{ hashFiles('config/boards/*.sh', 'config/suites/*.sh', 'config/flavors/*.sh') }}
-          restore-keys: |
-            image-${{ matrix.board }}-${{ matrix.suite }}-${{ matrix.flavor }}-
-
       - name: Upload image artifact
         uses: actions/upload-artifact@v4.3.3
         with:
